fix: register options

--- a/Views/Adm/Register.cshtml
+++ b/Views/Adm/Register.cshtml
@@ -18,11 +18,11 @@
             <div class="form-group">
                 <label for="floor"><b>Piso</b></label>
                 <div class="col-md-15">
-                    <input type="radio" name="floor" id="Piso1">
+                    <input value="Piso 1" type="radio" name="floor" id="Piso1">
                     <label for="Piso1">1</label>
-                    <input type="radio" name="floor" id="Piso2">
+                    <input value="Piso 2" type="radio" name="floor" id="Piso2">
                     <label for="Piso2">2</label>
-                    <input type="radio" name="floor" id="Piso3">
+                    <input value="Piso 3" type="radio" name="floor" id="Piso3">
                     <label for="Piso3">3</label>
                 </div>
             </div><br>
@@ -42,11 +42,11 @@
             </div><br>
 
             <div class="form-group">
-                <label for="type"><b>Tipo</b></label>
+                <label for="store"><b>Tipo</b></label>
                 <div class="col-md-15">
-                    <input type="radio" name="type" id="Loja">
+                    <input value="Loja" type="radio" name="store" id="Loja">
                     <label for="Loja">Loja</label>
-                    <input type="radio" name="type" id="Quiosque">
+                    <input value="Quiosque" type="radio" name="store" id="Quiosque">
                     <label for="Quiosque">Quiosque</label>
                 </div>
             </div><br>
